<resources>
    <string name="app_name">Inventory App</string>
    <string name="app_main_label">Inventory</string>
    <string name="action_insert_dummy_product">Add dummy product</string>
    <string name="action_delete_all_products">Delete all product</string>
    <string name="save_product">Save</string>
    <string name="delete_product">Delete product</string>
    <string name="editor_activity_title_add_new_product">Add new product</string>
    <string name="category_product">Product</string>
    <string name="product_name">Name</string>
    <string name="product_price">Price</string>
    <string name="product_quantity">Quantity</string>
    <string name="price_unit">$</string>
    <string name="quantity_unit">Unit(s)</string>
    <string name="suppliers_phone_number">Phone no. (eg: 12 345 67 89)</string>
    <string name="supplier_label">Supplier</string>
    <string name="table_contains">Products table contains</string>
    <string name="products">products.\n\n</string>

    <!-- Title text for the empty view, which explains situation met by the user [CHAR LIMIT=50] -->
    <string name="empty_view_title_text">There are no products added yet.</string>

    <!-- Subtitle text for the empty view that prompts the user to add a product [CHAR LIMIT=50] -->
    <string name="empty_view_subtitle_text">Click on the "plus" button and get started by adding product.</string>
    <string name="action_delete_all_entries">Deleted all products</string>

    <string name="editor_activity_title_edit_product">Edit product</string>
    <string name="editor_activity_saving_new_product_failed">Error with saving new product</string>
    <string name="editor_activity_saving_new_product_successful">New product saved</string>
    <string name="editor_activity_updating_current_product_failed">Error with updating current product</string>
    <string name="editor_activity_updating_current_product_successful">Product updated</string>
    <string name="editor_activity_deleting_current_product_failed">Error with deleting current product</string>
    <string name="editor_activity_deleting_current_product_successful">Product deleted</string>

    <string name="delete_dialog_message">Delete this product?</string>
    <string name="delete_all_products_dialog_message">Are you sure you want to delete all products?</string>

    <!-- Dialog button text for the option to confirm deleting the current product [CHAR LIMIT=20] -->
    <string name="delete">Delete</string>

    <!-- Dialog button text for the option to confirm deleting all products [CHAR LIMIT=20] -->
    <string name="delete_all">Delete all</string>

    <!-- Dialog button text for the option to cancel deletion of the current product [CHAR LIMIT=20] -->
    <string name="cancel">Cancel</string>

    <!-- Dialog message when user is leaving editor but hasn't saved changes [CHAR LIMIT=NONE] -->
    <string name="unsaved_changes_dialog_message">Discard your changes and quit editing?</string>

    <!-- Dialog button text for the option to discard a user's changes [CHAR LIMIT=20] -->
    <string name="discard">Discard</string>

    <!-- Dialog button text for the option to keep editing the current product [CHAR LIMIT=20] -->
    <string name="keep_editing">Keep Editing</string>

    <string name="editor_activity_insert_product_empty">Product hasn\'t been saved. Please fill in all fields</string>
    <string name="editor_activity_insert_not_null_fields">Before inserting the product, make sure you filled in all fields</string>
    <string name="button_order_product">Order product</string>
    <string name="inventory_activity_message_dummy_product_save">Dummy product saved</string>
    <string name="list_item_quantity_label">Quantity:</string>
    <string name="item_list_price_label_price">Price:</string>
    <string name="item_list_price_label_currency">$ each</string>
    <string name="item_list_product_label">Product:</string>
    <string name="product_sold_successful">Product sold.</string>
    <string name="product_sold_failed">There was a problem with selling the product</string>
    <string name="product_out_of_stock">You have no more items to sell. Please get into details and order new pieces.</string>
    <string name="change_quantity_by_label">Change quantity by:</string>
    <string name="amount_less_than_zero">Amount value cannot be less than 0</string>
    <string name="insertion_not_supported">Insertion not supported for</string>
    <string name="insertion_failed">Failed to insert row</string>
    <string name="delete_not_supported">Delete not provided for uri</string>
    <string name="update_not_supported">Update not supported for:</string>
    <string name="unknown_uri">Unknown URI</string>
    <string name="with_match">with match</string>
    <string name="cannot_query_unknown_uri">Cannot query unknown URI</string>
    <string name="sell_button">sell</string>

</resources>
