<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="@dimen/standard_app_padding_margin"
    tools:context=".AddProductActivity">

    <!-- Product category -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Label -->
        <TextView
            android:text="@string/category_product"
            style="@style/LabelStyle" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:orientation="vertical">

            <!-- Product's name field -->
            <EditText
                android:id="@+id/add_product_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/product_name"
                android:inputType="textCapWords" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <!-- Product's price field -->
                <EditText
                    android:id="@+id/add_product_price"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/product_price"
                    android:inputType="numberDecimal" />

                <!-- Unit for price (dollars) -->
                <TextView
                    android:id="@+id/label_price_unit"
                    android:text="@string/price_unit"
                    style="@style/UnitStyle" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <!-- Price field -->
                <EditText
                    android:id="@+id/add_product_quantity"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/product_quantity"
                    android:inputType="numberDecimal" />

                <!-- Unit for quantity (units) -->
                <TextView
                    android:id="@+id/label_price_quantity"
                    android:text="@string/quantity_unit"
                    style="@style/UnitStyle" />

            </RelativeLayout>

        </LinearLayout>

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/standard_app_padding_margin" />

    <!-- Supplier category -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Label -->
        <TextView
            android:text="@string/supplier_label"
            style="@style/LabelStyle"/>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:orientation="vertical">

            <!-- Supplier's name field -->
            <EditText
                android:id="@+id/add_supplier_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/product_name"
                android:inputType="textCapWords" />

            <!-- Supplier's phone field -->
            <EditText
                android:id="@+id/add_supplier_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/suppliers_phone_number"
                android:inputType="phone" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>
