<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="@dimen/standard_app_padding_margin"
    tools:context=".ProductEditorActivity">

    <!-- Product category -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Label -->
        <TextView
            android:text="@string/category_product"
            style="@style/LabelStyle" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:orientation="vertical">

            <!-- Product's name field -->
            <EditText
                android:id="@+id/add_product_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/product_name"
                android:inputType="textCapWords" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <!-- Product's price field -->
                <EditText
                    android:id="@+id/add_product_price"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/product_price"
                    android:inputType="numberDecimal" />

                <!-- Unit for price (dollars) -->
                <TextView
                    android:id="@+id/label_price_unit"
                    android:text="@string/price_unit"
                    style="@style/UnitStyle" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <!-- Product's quantity field -->
                <EditText
                    android:id="@+id/add_product_quantity"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/product_quantity"
                    android:inputType="numberDecimal" />

                <!-- Unit for quantity (units) -->
                <TextView
                    android:id="@+id/label_price_quantity"
                    android:text="@string/quantity_unit"
                    style="@style/UnitStyle" />

            </RelativeLayout>

            <!-- Changing product quantity section -->

            <LinearLayout
                android:id="@+id/change_quantity_section_header"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <TextView
                android:id="@+id/change_quantity_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif"
                android:text="@string/change_quantity_by_label"/>

            <EditText
                android:id="@+id/decrease_increase_by_edit_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:maxLength="5"
                android:inputType="numberDecimal"/>

            </LinearLayout>

            <RelativeLayout
                android:id="@+id/change_quantity_section"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <!-- Product's quantity field -->
                <Button
                    android:id="@+id/button_decrease_quantity"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentLeft="true"
                    android:text="-"/>

                <Button
                    android:id="@+id/button_increase_quantity"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:text="+"/>


            </RelativeLayout>

        </LinearLayout>

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/standard_app_padding_margin" />

    <!-- Supplier category -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Label -->
        <TextView
            android:text="@string/supplier_label"
            style="@style/LabelStyle"/>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:orientation="vertical">

            <!-- Supplier's name field -->
            <EditText
                android:id="@+id/add_supplier_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/product_name"
                android:inputType="textCapWords" />

            <!-- Supplier's phone field -->
            <EditText
                android:id="@+id/add_supplier_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/suppliers_phone_number"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:maxLength="12"
                android:inputType="phone" />

            <Button
                android:id="@+id/order_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:text="@string/button_order_product"/>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>
